--- a/Xprize_Github_Files/predictor_submission_template.ipynb
+++ b/Xprize_Github_Files/predictor_submission_template.ipynb
@@ -345,9 +345,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'pd' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-1-1c3317a154f0>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m prediction_output_df = pd.read_csv(output_file,\n\u001b[0m\u001b[1;32m      2\u001b[0m                                    \u001b[0mparse_dates\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'Date'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m                                    encoding=\"ISO-8859-1\")\n\u001b[1;32m      4\u001b[0m \u001b[0mprediction_output_df\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mhead\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'pd' is not defined"
+     ]
+    }
+   ],
    "source": [
     "prediction_output_df = pd.read_csv(output_file,\n",
     "                                   parse_dates=['Date'],\n",
@@ -378,7 +390,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!python predict.py -s 2020-08-01 -e 2020-08-04 -ip covid_xprize/validation/data/2020-09-30_historical_ip.csv -o predictions/2020-08-01_2020-08-04.csv"
+    "rize/validation/data/2020-09-30_his!python predict.py -s 2020-08-01 -e 2020-08-04 -ip covid_xptorical_ip.csv -o predictions/2020-08-01_2020-08-04.csv"
    ]
   },
   {
@@ -570,7 +582,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.3"
   },
   "pycharm": {
    "stem_cell": {
