--- a/Predictor/Database_Connector.ipynb
+++ b/Predictor/Database_Connector.ipynb
@@ -2181,7 +2181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 167,
    "metadata": {},
    "outputs": [
     {
@@ -2190,6 +2190,526 @@
      "text": [
       "   0\n",
       "0  0\n",
+      "5    0.0\n",
+      "Name: ConfirmedCases, dtype: float64\n",
+      "5    0.0\n",
+      "Name: ConfirmedCases, dtype: float64\n",
+      "5    1.0\n",
+      "Name: ConfirmedCases, dtype: float64\n",
+      "5    0.0\n",
+      "Name: ConfirmedCases, dtype: float64\n",
+      "5    0.0\n",
+      "Name: ConfirmedCases, dtype: float64\n",
+      "5    0.0\n",
+      "Name: ConfirmedCases, dtype: float64\n",
+      "5    1.0\n",
+      "Name: ConfirmedCases, dtype: float64\n",
+      "5    3.0\n",
+      "Name: ConfirmedCases, dtype: float64\n",
+      "5    4.0\n",
+      "Name: ConfirmedCases, dtype: float64\n",
+      "5    3.0\n",
+      "Name: ConfirmedCases, dtype: float64\n",
+      "5    3.0\n",
+      "Name: ConfirmedCases, dtype: float64\n",
+      "5   NaN\n",
+      "Name: ConfirmedCases, dtype: float64\n",
+      "5    11.0\n",
+      "Name: ConfirmedCases, dtype: float64\n",
+      "5    12.0\n",
+      "Name: ConfirmedCases, dtype: float64\n",
+      "5    14.0\n",
+      "Name: ConfirmedCases, dtype: float64\n",
+      "5    9.0\n",
+      "Name: ConfirmedCases, dtype: float64\n",
+      "5    71.0\n",
+      "Name: ConfirmedCases, dtype: float64\n",
+      "5    16.0\n",
+      "Name: ConfirmedCases, dtype: float64\n",
+      "5    12.0\n",
+      "Name: ConfirmedCases, dtype: float64\n",
+      "5    76.0\n",
+      "Name: ConfirmedCases, dtype: float64\n",
+      "5   NaN\n",
+      "Name: ConfirmedCases, dtype: float64\n",
+      "5    235.0\n",
+      "Name: ConfirmedCases, dtype: float64\n",
+      "5    114.0\n",
+      "Name: ConfirmedCases, dtype: float64\n",
+      "5    0.0\n",
+      "Name: ConfirmedCases, dtype: float64\n",
+      "5    117.0\n",
+      "Name: ConfirmedCases, dtype: float64\n",
+      "5    190.0\n",
+      "Name: ConfirmedCases, dtype: float64\n",
+      "5    171.0\n",
+      "Name: ConfirmedCases, dtype: float64\n",
+      "5    183.0\n",
+      "Name: ConfirmedCases, dtype: float64\n",
+      "5    45.0\n",
+      "Name: ConfirmedCases, dtype: float64\n",
+      "5    66.0\n",
+      "Name: ConfirmedCases, dtype: float64\n",
+      "5    822.0\n",
+      "Name: ConfirmedCases, dtype: float64\n",
+      "5    642.0\n",
+      "Name: ConfirmedCases, dtype: float64\n",
+      "5    525.0\n",
+      "Name: ConfirmedCases, dtype: float64\n",
+      "5    542.0\n",
+      "Name: ConfirmedCases, dtype: float64\n",
+      "5    418.0\n",
+      "Name: ConfirmedCases, dtype: float64\n",
+      "5    154.0\n",
+      "Name: ConfirmedCases, dtype: float64\n",
+      "5    246.0\n",
+      "Name: ConfirmedCases, dtype: float64\n",
+      "5    816.0\n",
+      "Name: ConfirmedCases, dtype: float64\n",
+      "5    1026.0\n",
+      "Name: ConfirmedCases, dtype: float64\n",
+      "5    772.0\n",
+      "Name: ConfirmedCases, dtype: float64\n",
+      "5    736.0\n",
+      "Name: ConfirmedCases, dtype: float64\n",
+      "5    203.0\n",
+      "Name: ConfirmedCases, dtype: float64\n",
+      "5    336.0\n",
+      "Name: ConfirmedCases, dtype: float64\n",
+      "5   NaN\n",
+      "Name: ConfirmedCases, dtype: float64\n",
+      "5    1672.0\n",
+      "Name: ConfirmedCases, dtype: float64\n",
+      "5    525.0\n",
+      "Name: ConfirmedCases, dtype: float64\n",
+      "5    1273.0\n",
+      "Name: ConfirmedCases, dtype: float64\n",
+      "5    1053.0\n",
+      "Name: ConfirmedCases, dtype: float64\n",
+      "5    373.0\n",
+      "Name: ConfirmedCases, dtype: float64\n",
+      "5    313.0\n",
+      "Name: ConfirmedCases, dtype: float64\n",
+      "5    805.0\n",
+      "Name: ConfirmedCases, dtype: float64\n",
+      "5    529.0\n",
+      "Name: ConfirmedCases, dtype: float64\n",
+      "5    826.0\n",
+      "Name: ConfirmedCases, dtype: float64\n",
+      "5    1086.0\n",
+      "Name: ConfirmedCases, dtype: float64\n",
+      "5    2178.0\n",
+      "Name: ConfirmedCases, dtype: float64\n",
+      "5    711.0\n",
+      "Name: ConfirmedCases, dtype: float64\n",
+      "5    981.0\n",
+      "Name: ConfirmedCases, dtype: float64\n",
+      "5    2345.0\n",
+      "Name: ConfirmedCases, dtype: float64\n",
+      "5    2117.0\n",
+      "Name: ConfirmedCases, dtype: float64\n",
+      "5    2540.0\n",
+      "Name: ConfirmedCases, dtype: float64\n",
+      "5    1676.0\n",
+      "Name: ConfirmedCases, dtype: float64\n",
+      "5    800.0\n",
+      "Name: ConfirmedCases, dtype: float64\n",
+      "5    598.0\n",
+      "Name: ConfirmedCases, dtype: float64\n",
+      "5    415.0\n",
+      "Name: ConfirmedCases, dtype: float64\n",
+      "5    1866.0\n",
+      "Name: ConfirmedCases, dtype: float64\n",
+      "5    3800.0\n",
+      "Name: ConfirmedCases, dtype: float64\n",
+      "5    2075.0\n",
+      "Name: ConfirmedCases, dtype: float64\n",
+      "5    1902.0\n",
+      "Name: ConfirmedCases, dtype: float64\n",
+      "5    2581.0\n",
+      "Name: ConfirmedCases, dtype: float64\n",
+      "5    1033.0\n",
+      "Name: ConfirmedCases, dtype: float64\n",
+      "5   NaN\n",
+      "Name: ConfirmedCases, dtype: float64\n",
+      "5    6897.0\n",
+      "Name: ConfirmedCases, dtype: float64\n",
+      "5    1162.0\n",
+      "Name: ConfirmedCases, dtype: float64\n",
+      "5    721.0\n",
+      "Name: ConfirmedCases, dtype: float64\n",
+      "5    2929.0\n",
+      "Name: ConfirmedCases, dtype: float64\n",
+      "5    3864.0\n",
+      "Name: ConfirmedCases, dtype: float64\n",
+      "5    10699.0\n",
+      "Name: ConfirmedCases, dtype: float64\n",
+      "5   -3687.0\n",
+      "Name: ConfirmedCases, dtype: float64\n",
+      "5    5290.0\n",
+      "Name: ConfirmedCases, dtype: float64\n",
+      "5   NaN\n",
+      "Name: ConfirmedCases, dtype: float64\n",
+      "5   NaN\n",
+      "Name: ConfirmedCases, dtype: float64\n",
+      "5    6382.0\n",
+      "Name: ConfirmedCases, dtype: float64\n",
+      "5    5691.0\n",
+      "Name: ConfirmedCases, dtype: float64\n",
+      "5    5586.0\n",
+      "Name: ConfirmedCases, dtype: float64\n",
+      "5   NaN\n",
+      "Name: ConfirmedCases, dtype: float64\n",
+      "5   NaN\n",
+      "Name: ConfirmedCases, dtype: float64\n",
+      "5    5188.0\n",
+      "Name: ConfirmedCases, dtype: float64\n",
+      "5    5717.0\n",
+      "Name: ConfirmedCases, dtype: float64\n",
+      "5   NaN\n",
+      "Name: ConfirmedCases, dtype: float64\n",
+      "5    6178.0\n",
+      "Name: ConfirmedCases, dtype: float64\n",
+      "5    6204.0\n",
+      "Name: ConfirmedCases, dtype: float64\n",
+      "5    5380.0\n",
+      "Name: ConfirmedCases, dtype: float64\n",
+      "5    4975.0\n",
+      "Name: ConfirmedCases, dtype: float64\n",
+      "5    5327.0\n",
+      "Name: ConfirmedCases, dtype: float64\n",
+      "5    3258.0\n",
+      "Name: ConfirmedCases, dtype: float64\n",
+      "5    8825.0\n",
+      "Name: ConfirmedCases, dtype: float64\n",
+      "5    1232.0\n",
+      "Name: ConfirmedCases, dtype: float64\n",
+      "5    1111.0\n",
+      "Name: ConfirmedCases, dtype: float64\n",
+      "5    19030.0\n",
+      "Name: ConfirmedCases, dtype: float64\n",
+      "5    4135.0\n",
+      "Name: ConfirmedCases, dtype: float64\n",
+      "5    3392.0\n",
+      "Name: ConfirmedCases, dtype: float64\n",
+      "5    2788.0\n",
+      "Name: ConfirmedCases, dtype: float64\n",
+      "5    7502.0\n",
+      "Name: ConfirmedCases, dtype: float64\n",
+      "5   NaN\n",
+      "Name: ConfirmedCases, dtype: float64\n",
+      "5    9921.0\n",
+      "Name: ConfirmedCases, dtype: float64\n",
+      "5    7073.0\n",
+      "Name: ConfirmedCases, dtype: float64\n",
+      "5    6156.0\n",
+      "Name: ConfirmedCases, dtype: float64\n",
+      "5    3408.0\n",
+      "Name: ConfirmedCases, dtype: float64\n",
+      "5    6235.0\n",
+      "Name: ConfirmedCases, dtype: float64\n",
+      "5    8555.0\n",
+      "Name: ConfirmedCases, dtype: float64\n",
+      "5    12244.0\n",
+      "Name: ConfirmedCases, dtype: float64\n",
+      "5    8523.0\n",
+      "Name: ConfirmedCases, dtype: float64\n",
+      "5    1828.0\n",
+      "Name: ConfirmedCases, dtype: float64\n",
+      "5    7649.0\n",
+      "Name: ConfirmedCases, dtype: float64\n",
+      "5    2891.0\n",
+      "Name: ConfirmedCases, dtype: float64\n",
+      "5    9638.0\n",
+      "Name: ConfirmedCases, dtype: float64\n",
+      "5    8657.0\n",
+      "Name: ConfirmedCases, dtype: float64\n",
+      "5    8350.0\n",
+      "Name: ConfirmedCases, dtype: float64\n",
+      "5    9395.0\n",
+      "Name: ConfirmedCases, dtype: float64\n",
+      "5    7780.0\n",
+      "Name: ConfirmedCases, dtype: float64\n",
+      "5    5107.0\n",
+      "Name: ConfirmedCases, dtype: float64\n",
+      "5    2610.0\n",
+      "Name: ConfirmedCases, dtype: float64\n",
+      "5    12000.0\n",
+      "Name: ConfirmedCases, dtype: float64\n",
+      "5    6569.0\n",
+      "Name: ConfirmedCases, dtype: float64\n",
+      "5    8872.0\n",
+      "Name: ConfirmedCases, dtype: float64\n",
+      "5    5367.0\n",
+      "Name: ConfirmedCases, dtype: float64\n",
+      "5    4612.0\n",
+      "Name: ConfirmedCases, dtype: float64\n",
+      "5    3022.0\n",
+      "Name: ConfirmedCases, dtype: float64\n",
+      "5    1385.0\n",
+      "Name: ConfirmedCases, dtype: float64\n",
+      "5    6235.0\n",
+      "Name: ConfirmedCases, dtype: float64\n",
+      "5    16777.0\n",
+      "Name: ConfirmedCases, dtype: float64\n",
+      "5   NaN\n",
+      "Name: ConfirmedCases, dtype: float64\n",
+      "5    16263.0\n",
+      "Name: ConfirmedCases, dtype: float64\n",
+      "5    4501.0\n",
+      "Name: ConfirmedCases, dtype: float64\n",
+      "5    3672.0\n",
+      "Name: ConfirmedCases, dtype: float64\n",
+      "5    0.0\n",
+      "Name: ConfirmedCases, dtype: float64\n",
+      "5   NaN\n",
+      "Name: ConfirmedCases, dtype: float64\n",
+      "5    13298.0\n",
+      "Name: ConfirmedCases, dtype: float64\n",
+      "5    10014.0\n",
+      "Name: ConfirmedCases, dtype: float64\n",
+      "5   NaN\n",
+      "Name: ConfirmedCases, dtype: float64\n",
+      "5    15371.0\n",
+      "Name: ConfirmedCases, dtype: float64\n",
+      "5    9676.0\n",
+      "Name: ConfirmedCases, dtype: float64\n",
+      "5    13405.0\n",
+      "Name: ConfirmedCases, dtype: float64\n",
+      "5    9709.0\n",
+      "Name: ConfirmedCases, dtype: float64\n",
+      "5    13352.0\n",
+      "Name: ConfirmedCases, dtype: float64\n",
+      "5    5395.0\n",
+      "Name: ConfirmedCases, dtype: float64\n",
+      "5    1289.0\n",
+      "Name: ConfirmedCases, dtype: float64\n",
+      "5    11147.0\n",
+      "Name: ConfirmedCases, dtype: float64\n",
+      "5    15619.0\n",
+      "Name: ConfirmedCases, dtype: float64\n",
+      "5    19274.0\n",
+      "Name: ConfirmedCases, dtype: float64\n",
+      "5    11667.0\n",
+      "Name: ConfirmedCases, dtype: float64\n",
+      "5    11408.0\n",
+      "Name: ConfirmedCases, dtype: float64\n",
+      "5    1963.0\n",
+      "Name: ConfirmedCases, dtype: float64\n",
+      "5    3172.0\n",
+      "Name: ConfirmedCases, dtype: float64\n",
+      "5    8865.0\n",
+      "Name: ConfirmedCases, dtype: float64\n",
+      "5    9847.0\n",
+      "Name: ConfirmedCases, dtype: float64\n",
+      "5    9451.0\n",
+      "Name: ConfirmedCases, dtype: float64\n",
+      "5    5132.0\n",
+      "Name: ConfirmedCases, dtype: float64\n",
+      "5    13284.0\n",
+      "Name: ConfirmedCases, dtype: float64\n",
+      "5    4885.0\n",
+      "Name: ConfirmedCases, dtype: float64\n",
+      "5    2351.0\n",
+      "Name: ConfirmedCases, dtype: float64\n",
+      "5    9190.0\n",
+      "Name: ConfirmedCases, dtype: float64\n",
+      "5    10465.0\n",
+      "Name: ConfirmedCases, dtype: float64\n",
+      "5    8318.0\n",
+      "Name: ConfirmedCases, dtype: float64\n",
+      "5    11756.0\n",
+      "Name: ConfirmedCases, dtype: float64\n",
+      "5    5213.0\n",
+      "Name: ConfirmedCases, dtype: float64\n",
+      "5    1982.0\n",
+      "Name: ConfirmedCases, dtype: float64\n",
+      "5    938.0\n",
+      "Name: ConfirmedCases, dtype: float64\n",
+      "5    10033.0\n",
+      "Name: ConfirmedCases, dtype: float64\n",
+      "5    11956.0\n",
+      "Name: ConfirmedCases, dtype: float64\n",
+      "5    11647.0\n",
+      "Name: ConfirmedCases, dtype: float64\n",
+      "5    7038.0\n",
+      "Name: ConfirmedCases, dtype: float64\n",
+      "5    8069.0\n",
+      "Name: ConfirmedCases, dtype: float64\n",
+      "5    2637.0\n",
+      "Name: ConfirmedCases, dtype: float64\n",
+      "5    1608.0\n",
+      "Name: ConfirmedCases, dtype: float64\n",
+      "5    1453.0\n",
+      "Name: ConfirmedCases, dtype: float64\n",
+      "5    7793.0\n",
+      "Name: ConfirmedCases, dtype: float64\n",
+      "5    8178.0\n",
+      "Name: ConfirmedCases, dtype: float64\n",
+      "5    8055.0\n",
+      "Name: ConfirmedCases, dtype: float64\n",
+      "5    7881.0\n",
+      "Name: ConfirmedCases, dtype: float64\n",
+      "5    1567.0\n",
+      "Name: ConfirmedCases, dtype: float64\n",
+      "5    1092.0\n",
+      "Name: ConfirmedCases, dtype: float64\n",
+      "5    7922.0\n",
+      "Name: ConfirmedCases, dtype: float64\n",
+      "5    8157.0\n",
+      "Name: ConfirmedCases, dtype: float64\n",
+      "5    7393.0\n",
+      "Name: ConfirmedCases, dtype: float64\n",
+      "5    7711.0\n",
+      "Name: ConfirmedCases, dtype: float64\n",
+      "5    7141.0\n",
+      "Name: ConfirmedCases, dtype: float64\n",
+      "5    3627.0\n",
+      "Name: ConfirmedCases, dtype: float64\n",
+      "5    2032.0\n",
+      "Name: ConfirmedCases, dtype: float64\n",
+      "5    8090.0\n",
+      "Name: ConfirmedCases, dtype: float64\n",
+      "5    6551.0\n",
+      "Name: ConfirmedCases, dtype: float64\n",
+      "5    6267.0\n",
+      "Name: ConfirmedCases, dtype: float64\n",
+      "5   NaN\n",
+      "Name: ConfirmedCases, dtype: float64\n",
+      "5    1349.0\n",
+      "Name: ConfirmedCases, dtype: float64\n",
+      "5    905.0\n",
+      "Name: ConfirmedCases, dtype: float64\n",
+      "5   NaN\n",
+      "Name: ConfirmedCases, dtype: float64\n",
+      "5   NaN\n",
+      "Name: ConfirmedCases, dtype: float64\n",
+      "5    6096.0\n",
+      "Name: ConfirmedCases, dtype: float64\n",
+      "5    473.0\n",
+      "Name: ConfirmedCases, dtype: float64\n",
+      "5    677.0\n",
+      "Name: ConfirmedCases, dtype: float64\n",
+      "5    6260.0\n",
+      "Name: ConfirmedCases, dtype: float64\n",
+      "5    5916.0\n",
+      "Name: ConfirmedCases, dtype: float64\n",
+      "5    5649.0\n",
+      "Name: ConfirmedCases, dtype: float64\n",
+      "5    5786.0\n",
+      "Name: ConfirmedCases, dtype: float64\n",
+      "5    6626.0\n",
+      "Name: ConfirmedCases, dtype: float64\n",
+      "5    2844.0\n",
+      "Name: ConfirmedCases, dtype: float64\n",
+      "5    684.0\n",
+      "Name: ConfirmedCases, dtype: float64\n",
+      "5    685.0\n",
+      "Name: ConfirmedCases, dtype: float64\n",
+      "5    6031.0\n",
+      "Name: ConfirmedCases, dtype: float64\n",
+      "5    6553.0\n",
+      "Name: ConfirmedCases, dtype: float64\n",
+      "5    5627.0\n",
+      "Name: ConfirmedCases, dtype: float64\n",
+      "5    5394.0\n",
+      "Name: ConfirmedCases, dtype: float64\n",
+      "5    968.0\n",
+      "Name: ConfirmedCases, dtype: float64\n",
+      "5    437.0\n",
+      "Name: ConfirmedCases, dtype: float64\n",
+      "5    4923.0\n",
+      "Name: ConfirmedCases, dtype: float64\n",
+      "5   NaN\n",
+      "Name: ConfirmedCases, dtype: float64\n",
+      "5    10380.0\n",
+      "Name: ConfirmedCases, dtype: float64\n",
+      "5    5614.0\n",
+      "Name: ConfirmedCases, dtype: float64\n",
+      "5    2725.0\n",
+      "Name: ConfirmedCases, dtype: float64\n",
+      "5    863.0\n",
+      "Name: ConfirmedCases, dtype: float64\n",
+      "5    5364.0\n",
+      "Name: ConfirmedCases, dtype: float64\n",
+      "5    5375.0\n",
+      "Name: ConfirmedCases, dtype: float64\n",
+      "5   NaN\n",
+      "Name: ConfirmedCases, dtype: float64\n",
+      "5    7267.0\n",
+      "Name: ConfirmedCases, dtype: float64\n",
+      "5    1020.0\n",
+      "Name: ConfirmedCases, dtype: float64\n",
+      "5    648.0\n",
+      "Name: ConfirmedCases, dtype: float64\n",
+      "5    749.0\n",
+      "Name: ConfirmedCases, dtype: float64\n",
+      "5    4755.0\n",
+      "Name: ConfirmedCases, dtype: float64\n",
+      "5   NaN\n",
+      "Name: ConfirmedCases, dtype: float64\n",
+      "5    10770.0\n",
+      "Name: ConfirmedCases, dtype: float64\n",
+      "5   NaN\n",
+      "Name: ConfirmedCases, dtype: float64\n",
+      "5    9435.0\n",
+      "Name: ConfirmedCases, dtype: float64\n",
+      "5    6421.0\n",
+      "Name: ConfirmedCases, dtype: float64\n",
+      "5    6794.0\n",
+      "Name: ConfirmedCases, dtype: float64\n",
+      "5    9058.0\n",
+      "Name: ConfirmedCases, dtype: float64\n",
+      "5   NaN\n",
+      "Name: ConfirmedCases, dtype: float64\n",
+      "5   NaN\n",
+      "Name: ConfirmedCases, dtype: float64\n",
+      "5    14119.0\n",
+      "Name: ConfirmedCases, dtype: float64\n",
+      "5    4523.0\n",
+      "Name: ConfirmedCases, dtype: float64\n",
+      "5   NaN\n",
+      "Name: ConfirmedCases, dtype: float64\n",
+      "5    2379.0\n",
+      "Name: ConfirmedCases, dtype: float64\n",
+      "5    1180.0\n",
+      "Name: ConfirmedCases, dtype: float64\n",
+      "5    8937.0\n",
+      "Name: ConfirmedCases, dtype: float64\n",
+      "5    9114.0\n",
+      "Name: ConfirmedCases, dtype: float64\n",
+      "5    8208.0\n",
+      "Name: ConfirmedCases, dtype: float64\n",
+      "5    8237.0\n",
+      "Name: ConfirmedCases, dtype: float64\n",
+      "5    8938.0\n",
+      "Name: ConfirmedCases, dtype: float64\n",
+      "5    2675.0\n",
+      "Name: ConfirmedCases, dtype: float64\n",
+      "5    1116.0\n",
+      "Name: ConfirmedCases, dtype: float64\n",
+      "5    7923.0\n",
+      "Name: ConfirmedCases, dtype: float64\n",
+      "5    9784.0\n",
+      "Name: ConfirmedCases, dtype: float64\n",
+      "5    9786.0\n",
+      "Name: ConfirmedCases, dtype: float64\n",
+      "5   NaN\n",
+      "Name: ConfirmedCases, dtype: float64\n",
+      "5    2313.0\n",
+      "Name: ConfirmedCases, dtype: float64\n",
+      "5    4412.0\n",
+      "Name: ConfirmedCases, dtype: float64\n",
+      "5    0.0\n",
+      "Name: ConfirmedCases, dtype: float64\n",
+      "5    20303.0\n",
+      "Name: ConfirmedCases, dtype: float64\n",
+      "5    9922.0\n",
+      "Name: ConfirmedCases, dtype: float64\n",
+      "5    12447.0\n",
+      "Name: ConfirmedCases, dtype: float64\n",
+      "5    0.0\n",
+      "Name: ConfirmedCases, dtype: float64\n",
       "     0\n",
       "0    0\n",
       "1    0\n",
@@ -2219,6 +2739,7 @@
     "        a = br_sp_data.query(f'Date==\"{d}\"')\n",
     "        b = br_sp_data.query(f'Date==\"{d-timedelta(days=1)}\"')\n",
     "        c = a[\"ConfirmedCases\"]-b[\"ConfirmedCases\"]\n",
+    "        print(c)\n",
     "        if c.isnull:\n",
     "            c = 0\n",
     "        else:\n",
@@ -2226,9 +2747,7 @@
     "        sp_I_change[i] = c\n",
     "        i += 1\n",
     "    else:\n",
-    "        i += 1\n",
-    "\n",
-    "print(sp_I_change.transpose())"
+    "        i += 1"
    ]
   },
   {
