--- a/Predictor/Database_Connector.ipynb
+++ b/Predictor/Database_Connector.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,10 +39,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
+    "### Testing 123\n",
+    "\n",
     "# Main source for the training data\n",
     "DATA_URL = 'https://raw.githubusercontent.com/OxCGRT/covid-policy-tracker/master/data/OxCGRT_latest.csv'\n",
     "# Local file\n",
@@ -54,16 +56,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "('data/OxCGRT_latest.csv', <http.client.HTTPMessage at 0x7fbafaa39d60>)"
+       "('data/OxCGRT_latest.csv', <http.client.HTTPMessage at 0x2d4dba64940>)"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
