--- a/Predictor/Database_Connector.ipynb
+++ b/Predictor/Database_Connector.ipynb
@@ -2182,7 +2182,12 @@
   {
    "cell_type": "code",
    "execution_count": 167,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
