--- a/Predictor/linear_particle_filter.ipynb
+++ b/Predictor/linear_particle_filter.ipynb
@@ -241,7 +241,12 @@
   {
    "cell_type": "code",
    "execution_count": 76,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
