--- a/Predictor/ParticleFilterSIR.ipynb
+++ b/Predictor/ParticleFilterSIR.ipynb
@@ -105,7 +105,7 @@
     "\n",
     "    def set_init_i(self, i, s=inf):\n",
     "        self.i = float(i)\n",
-    "        self.s = 1 - i if float(s) is inf else i \n",
+    "        self.s = 1 - i if float(s) is inf else s\n",
     "        self.Is = [self.i]\n",
     "        self.Ss = [self.s]"
    ]
